delphiParser.java
// Generated from delphi.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, BEGIN=2, END=3, VAR=4, CONST=5, TYPE=6, CLASS=7, PRIVATE=8, 
		PUBLIC=9, CONSTRUCTOR=10, DESTRUCTOR=11, PROCEDURE=12, FUNCTION=13, IF=14, 
		THEN=15, ELSE=16, WHILE=17, DO=18, NEW=19, ARRAY=20, OF=21, POINTER=22, 
		OR=23, AND=24, NOT=25, DIV=26, MOD=27, EQUALS=28, NOT_EQUALS=29, LESS_THAN=30, 
		LESS_EQUALS=31, GREATER_EQUALS=32, GREATER_THAN=33, PLUS=34, MINUS=35, 
		STAR=36, SLASH=37, DOT=38, COMMA=39, SEMICOLON=40, COLON=41, LPAREN=42, 
		RPAREN=43, LBRACK=44, RBRACK=45, ASSIGN=46, DOTDOT=47, IDENT=48, NUMBER=49, 
		STRING=50, WS=51, COMMENT=52;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_methodImplementation = 2, 
		RULE_constructorImplementation = 3, RULE_destructorImplementation = 4, 
		RULE_procedureImplementation = 5, RULE_functionImplementation = 6, RULE_classIdentifier = 7, 
		RULE_classDefinition = 8, RULE_inheritanceList = 9, RULE_classBlock = 10, 
		RULE_privateSection = 11, RULE_publicSection = 12, RULE_fieldDeclaration = 13, 
		RULE_methodDeclaration = 14, RULE_constructorDeclaration = 15, RULE_destructorDeclaration = 16, 
		RULE_procedureDeclaration = 17, RULE_functionDeclaration = 18, RULE_parameterList = 19, 
		RULE_parameter = 20, RULE_compoundStatement = 21, RULE_statementList = 22, 
		RULE_statement = 23, RULE_assignmentStatement = 24, RULE_methodCallStatement = 25, 
		RULE_constructorCall = 26, RULE_ifStatement = 27, RULE_whileStatement = 28, 
		RULE_emptyStatement = 29, RULE_block = 30, RULE_variable = 31, RULE_expression = 32, 
		RULE_simpleExpression = 33, RULE_term = 34, RULE_signedFactor = 35, RULE_factor = 36, 
		RULE_functionCall = 37, RULE_expressionList = 38, RULE_relationalOperator = 39, 
		RULE_additiveOperator = 40, RULE_multiplicativeOperator = 41, RULE_constant = 42, 
		RULE_variableDeclaration = 43, RULE_constantDefinition = 44, RULE_typeDefinition = 45, 
		RULE_type = 46, RULE_simpleType = 47, RULE_arrayType = 48, RULE_pointerType = 49, 
		RULE_classType = 50, RULE_identifier = 51, RULE_number = 52, RULE_string = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "methodImplementation", "constructorImplementation", 
			"destructorImplementation", "procedureImplementation", "functionImplementation", 
			"classIdentifier", "classDefinition", "inheritanceList", "classBlock", 
			"privateSection", "publicSection", "fieldDeclaration", "methodDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "procedureDeclaration", 
			"functionDeclaration", "parameterList", "parameter", "compoundStatement", 
			"statementList", "statement", "assignmentStatement", "methodCallStatement", 
			"constructorCall", "ifStatement", "whileStatement", "emptyStatement", 
			"block", "variable", "expression", "simpleExpression", "term", "signedFactor", 
			"factor", "functionCall", "expressionList", "relationalOperator", "additiveOperator", 
			"multiplicativeOperator", "constant", "variableDeclaration", "constantDefinition", 
			"typeDefinition", "type", "simpleType", "arrayType", "pointerType", "classType", 
			"identifier", "number", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'begin'", "'end'", "'var'", "'const'", "'type'", 
			"'class'", "'private'", "'public'", "'constructor'", "'destructor'", 
			"'procedure'", "'function'", "'if'", "'then'", "'else'", "'while'", "'do'", 
			"'new'", "'array'", "'of'", "'pointer'", "'or'", "'and'", "'not'", "'div'", 
			"'mod'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", 
			"'/'", "'.'", "','", "';'", "':'", "'('", "')'", "'['", "']'", "':='", 
			"'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "BEGIN", "END", "VAR", "CONST", "TYPE", "CLASS", "PRIVATE", 
			"PUBLIC", "CONSTRUCTOR", "DESTRUCTOR", "PROCEDURE", "FUNCTION", "IF", 
			"THEN", "ELSE", "WHILE", "DO", "NEW", "ARRAY", "OF", "POINTER", "OR", 
			"AND", "NOT", "DIV", "MOD", "EQUALS", "NOT_EQUALS", "LESS_THAN", "LESS_EQUALS", 
			"GREATER_EQUALS", "GREATER_THAN", "PLUS", "MINUS", "STAR", "SLASH", "DOT", 
			"COMMA", "SEMICOLON", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"ASSIGN", "DOTDOT", "IDENT", "NUMBER", "STRING", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(delphiParser.SEMICOLON, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PROGRAM);
			setState(109);
			identifier();
			setState(110);
			match(SEMICOLON);
			setState(111);
			declarations();
			setState(112);
			compoundStatement();
			setState(113);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(delphiParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(delphiParser.SEMICOLON, i);
		}
		public List<TypeDefinitionContext> typeDefinition() {
			return getRuleContexts(TypeDefinitionContext.class);
		}
		public TypeDefinitionContext typeDefinition(int i) {
			return getRuleContext(TypeDefinitionContext.class,i);
		}
		public List<ClassDefinitionContext> classDefinition() {
			return getRuleContexts(ClassDefinitionContext.class);
		}
		public ClassDefinitionContext classDefinition(int i) {
			return getRuleContext(ClassDefinitionContext.class,i);
		}
		public List<MethodImplementationContext> methodImplementation() {
			return getRuleContexts(MethodImplementationContext.class);
		}
		public MethodImplementationContext methodImplementation(int i) {
			return getRuleContext(MethodImplementationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONST) {
				{
				{
				setState(115);
				constantDefinition();
				setState(116);
				match(SEMICOLON);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(123);
				typeDefinition();
				setState(124);
				match(SEMICOLON);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(131);
				classDefinition();
				setState(132);
				match(SEMICOLON);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0)) {
				{
				{
				setState(139);
				methodImplementation();
				setState(140);
				match(SEMICOLON);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(147);
				variableDeclaration();
				setState(148);
				match(SEMICOLON);
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodImplementationContext extends ParserRuleContext {
		public ConstructorImplementationContext constructorImplementation() {
			return getRuleContext(ConstructorImplementationContext.class,0);
		}
		public DestructorImplementationContext destructorImplementation() {
			return getRuleContext(DestructorImplementationContext.class,0);
		}
		public ProcedureImplementationContext procedureImplementation() {
			return getRuleContext(ProcedureImplementationContext.class,0);
		}
		public FunctionImplementationContext functionImplementation() {
			return getRuleContext(FunctionImplementationContext.class,0);
		}
		public MethodImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterMethodImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitMethodImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitMethodImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodImplementationContext methodImplementation() throws RecognitionException {
		MethodImplementationContext _localctx = new MethodImplementationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_methodImplementation);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTRUCTOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				constructorImplementation();
				}
				break;
			case DESTRUCTOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				destructorImplementation();
				}
				break;
			case PROCEDURE:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				procedureImplementation();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				functionImplementation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorImplementationContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(delphiParser.CONSTRUCTOR, 0); }
		public ClassIdentifierContext classIdentifier() {
			return getRuleContext(ClassIdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(delphiParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ConstructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstructorImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitConstructorImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorImplementationContext constructorImplementation() throws RecognitionException {
		ConstructorImplementationContext _localctx = new ConstructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constructorImplementation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(CONSTRUCTOR);
			setState(162);
			classIdentifier();
			setState(163);
			match(DOT);
			setState(164);
			identifier();
			setState(165);
			match(SEMICOLON);
			setState(166);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DestructorImplementationContext extends ParserRuleContext {
		public TerminalNode DESTRUCTOR() { return getToken(delphiParser.DESTRUCTOR, 0); }
		public ClassIdentifierContext classIdentifier() {
			return getRuleContext(ClassIdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(delphiParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DestructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDestructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDestructorImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitDestructorImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestructorImplementationContext destructorImplementation() throws RecognitionException {
		DestructorImplementationContext _localctx = new DestructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_destructorImplementation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(DESTRUCTOR);
			setState(169);
			classIdentifier();
			setState(170);
			match(DOT);
			setState(171);
			identifier();
			setState(172);
			match(SEMICOLON);
			setState(173);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureImplementationContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(delphiParser.PROCEDURE, 0); }
		public ClassIdentifierContext classIdentifier() {
			return getRuleContext(ClassIdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(delphiParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ProcedureImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProcedureImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProcedureImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProcedureImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureImplementationContext procedureImplementation() throws RecognitionException {
		ProcedureImplementationContext _localctx = new ProcedureImplementationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procedureImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(PROCEDURE);
			setState(176);
			classIdentifier();
			setState(177);
			match(DOT);
			setState(178);
			identifier();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(179);
				parameterList();
				}
			}

			setState(182);
			match(SEMICOLON);
			setState(183);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionImplementationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(delphiParser.FUNCTION, 0); }
		public ClassIdentifierContext classIdentifier() {
			return getRuleContext(ClassIdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(delphiParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(delphiParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public FunctionImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterFunctionImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitFunctionImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitFunctionImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionImplementationContext functionImplementation() throws RecognitionException {
		FunctionImplementationContext _localctx = new FunctionImplementationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(FUNCTION);
			setState(186);
			classIdentifier();
			setState(187);
			match(DOT);
			setState(188);
			identifier();
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(189);
				parameterList();
				}
			}

			setState(192);
			match(COLON);
			setState(193);
			type();
			setState(194);
			match(SEMICOLON);
			setState(195);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassIdentifierContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ClassIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterClassIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitClassIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitClassIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassIdentifierContext classIdentifier() throws RecognitionException {
		ClassIdentifierContext _localctx = new ClassIdentifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
